# ucdevices

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile-cmake  README-HOWTO-use-cmake.md  README.md  gencpp-config.json
include/cmspk/: ucdev.hpp
include/cmspk/ucdev/: InputValueDevice.hpp  OutputValueDevice.hpp  ReadWriteAssertions.hpp
src-tests/: CMakeLists.txt  TestRunner.cpp  UT-InputValueDevice.hpp  UT-OutputValueDevice.hpp  UT-ReadWriteAssertions.hpp
